--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+<head>
 	<title>Hello Udacity</title>
 </head>
 <body>
-	<h1>Hello Udacity! This is great!</h1></strong>or </strong>
-
+	<h1>Hello Udacity! This is great!</h1><strong>or </strong>
+</body>
 </html>
