--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Udacity</title>
 </head>
 <body>
-	<h1>Hello Udacity! This is great!</h1><strong>or </strong>
+	<h1>Hello Udacity! This is great!</h1><strong> Smiley!</strong>
 </body>
 </html>
